$Id: History,v 1.32 2001-10-11 01:37:52 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 10, 2001, M.Asai (intercoms-V03-02-11)
- Change aliasing characters from "[" and "]" to "{" and "}".
  This is required to fix the crash in hadronics test code.
- Introducing /control/createHTML

Oct 5, 2001, M.Asai (intercoms-V03-02-10)
- Introducing Loop() and Foreach() methods.
- Introducing three new UI commands
    /control/shell
    /control/foreach
    /control/loop

Oct 4, 2001, M.Asai (intercoms-V03-02-09)
- Correction for string parameter starting with a space.
- Recurrent variables 

Oct 1, 2001, M.Asai (intercoms-V03-02-08)
- Introducing a functionality of "shell variables".
    New class : G4UIaliasList
    Modified classes : G4UImanager G4UIcontrolMessenger

Sep 28, 2001, M.Asai (intercoms-V03-02-07)
- For Batch mode, comment lines are displayed only at verbose level = 2.

Aug 29, 2001, M.Asai (intercoms-V03-02-06)
- Corrections in G4UIbatch to ignore the blank line.

Aug 27, 2001, M.Asai (intercoms-V03-02-05)
- G4UIbatch now displays (G4cerr) the error message.
  Correction according to the bug report #294.

Aug 17, 2001, J.Allison (intercoms-V03-02-04)