@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2001-10-11 01:37:52 asaim Exp $
+$Id: History,v 1.33 2001-10-11 13:29:15 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 11, 2001, G.Cosmo (intercoms-V03-02-12)
+- Replaced inclusions of ctoken.h with G4Tokenizer.hh in
+  G4UImanager[.hh.cc], G4UIcommand.cc and G4UIparameter.cc.
+  Removed comment on RW wrappers.
+- Co-works with tag "globals-V03-02-03" where the STLInterface
+  module has been removed.
 
 Oct 10, 2001, M.Asai (intercoms-V03-02-11)
 - Change aliasing characters from "[" and "]" to "{" and "}".
